# extlint

./: .gitignore  .merlin  .travis.yml  Cargo.toml  Justfile  Makefile  README.md
.travis/: install-dependencies.sh  package.sh
get-gitgrade-repos/: Cargo.toml
get-gitgrade-repos/src/: grading_scripts.rs  main.rs  utils.rs
json_of_ocaml/: Cargo.toml
json_of_ocaml/src/: main.rs
ocaml-ast/: Cargo.toml  build.rs
ocaml-ast/ocaml-src/: main.c  ocaml_ast.ml
ocaml-ast/src/: ast_class.rs  ast_core.rs  ast_errors.rs  ast_extension.rs  ast_locations.rs  ast_misc.rs  ast_module.rs  ast_toplevel.rs  ffi.rs  lib.rs  message.rs
ocaml-ast/src/tests/: ast.rs  integration.rs  mod.rs
ocaml-ast/src/tests/data/: hello_world.json  hello_world.ml
ocaml_ast/: .merlin  Makefile  _tags  main.ml  ocaml_ast.ml  ocaml_ast.mli  ser_datalog.ml  ser_datalog.mli  ser_json.ml  ser_json.mli  serialize.ml  serialize.mli  util.ml  util.mli
pretty-errors/: Cargo.toml
pretty-errors/src/: lib.rs  tests.rs
rules/: exprRules.pl  lints.pl  main.pl  rules.pl  test.ml
rules/booleans/: main.pl
serde-datalog/: Cargo.toml
serde-datalog/src/: ast_builder.rs  data.rs  lib.rs  print.rs  simplify.rs
serde-datalog/src/tests/: ast_builder.rs  flat.rs  mod.rs  print.rs
src/datalog_of_ocaml/: main.rs
src/extlint_render_error/: main.rs
src/json_of_ocaml/: main.rs
src/ocaml-syntax-check/: main.rs
