[workspace]
members = [
	"get-gitgrade-repos",
	"ocaml-ast",
]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "An extensible linter for OCaml programs."
homepage = "https://github.com/remexre/extlint"
license = "Apache-2.0/MIT"
name = "extlint"
repository = "https://github.com/remexre/extlint"
version = "0.1.0"

[dependencies]
clap = "2.29.4"
ocaml-ast = { path = "ocaml-ast" }
serde_json = "1.0.9"

[[bin]]
name = "json_of_ocaml"
path = "src/json_of_ocaml/main.rs"

[[bin]]
name = "ocaml-syntax-check"
path = "src/ocaml-syntax-check/main.rs"

[patch.crates-io]
# https://github.com/remexre/extlint/issues/2
serde_json = { git = "https://github.com/remexre/json.git" }
