[workspace]
members = [
	"get-gitgrade-repos",
	"pretty-errors",
]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "An extensible linter for OCaml programs."
homepage = "https://github.com/remexre/extlint"
license = "Apache-2.0/MIT"
name = "extlint"
repository = "https://github.com/remexre/extlint"
version = "0.1.3-pre"

[badges]
travis-ci = { repository = "remexre/swipl-rs" }

[dependencies]
clap = "2.29.4"
failure = "0.1.1"
pretty-errors = { path = "pretty-errors" , version = "0.1.0" }
serde = "1.0.30"
serde_derive = "1.0.30"
serde_json = "1.0.9"
structopt = "0.2.5"

[[bin]]
name = "extlint_render_error"
path = "src/extlint_render_error/main.rs"

[patch.crates-io]
# https://github.com/remexre/extlint/issues/2
serde_json = { git = "https://github.com/remexre/json.git" }
