[package]
name = "get-gitgrade-repos"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
clap = "2.29.4"
failure = "0.1.1"
futures = "0.1.18"
lazy_static = "1.0.0"
log = "0.4.1"
stderrlog = { version = "0.3.0", git = "https://github.com/remexre/stderrlog-rs.git" }
tokio-core = "0.1.12"
tokio-process = "0.1.5"
