[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "Parses an OCaml file, printing the output as JSON"
documentation = "https://docs.rs/json_of_ocaml"
homepage = "https://github.umn.edu/ringo025/extlint"
license = "Apache-2.0/MIT"
name = "json_of_ocaml"
repository = "https://github.umn.edu/ringo025/extlint"
version = "0.1.0"

[dependencies]
clap = "2.29.2"
ocaml-ast = { path = "../ocaml-ast" }
serde_json = "1.0.9"
