[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A library for parsing OCaml."
documentation = "https://docs.rs/ocaml-ast"
homepage = "https://github.com/remexre/extlint"
license = "Apache-2.0/MIT"
name = "ocaml-ast"
repository = "https://github.com/remexre/extlint"
version = "0.1.0"

[dependencies]
ansi_term = { version = "0.11.0", optional = true }
either = "1.4.0"
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "1.0.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

[build-dependencies]
cc = "1.0.4"
lazy_static = "1.0.0"

[features]
default = ["ansi_term"]
